# trading-ai

./: .coverage  .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ADVANCED_STRATEGIES_SUMMARY.md  AUDIT_REPORT.md  BRANCH_DOCS_INDEX.md  BRANCH_IMPLEMENTATION_SUMMARY.md  BRANCH_MANAGEMENT.md  BRANCH_QUICK_REF.md  BRANCH_STRATEGY_RECOMMENDATIONS.md  BRANCH_VISUAL_GUIDE.md  BROKER_INTEGRATION_COMPLETE.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CODESPACES.md  CONTRIBUTING.md  CRYPTO_STRATEGIES_COMPLETE.md  CRYPTO_TRANSFORMATION_SUMMARY.md  DEPLOYMENT.md  DEPLOY_NOW.md  DEX_AGGREGATION_COMPLETE.md  DOCUMENTATION_UPDATE.md  Dockerfile  ENHANCEMENT_ROADMAP.md  FINAL_SUMMARY.md  FIXES.md  FULL_SETUP_GUIDE.md  FULL_VISION_ROADMAP.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE_NETWORK_COMPLETE.md  Makefile  PAPER_TRADING_ENHANCEMENTS.md  PATH_A_COMPLETE.md  PATH_B_COMPLETE.md  PATH_C_COMPLETE.md  PATH_D_COMPLETE.md  (+69 more)
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml  pull_request_template.md
api/: README.md  __init__.py  config.py  dependencies.py  main.py
apps/: CRYPTO_DEPLOYMENT_GUIDE.md  DEPLOY.sh  DEPLOYMENT_INSTRUCTIONS.md
backtests/: AAPL_backtest_report.txt  MSFT_backtest_report.txt  SPY_backtest_report.txt  backtest_report_20260215_230140.txt  backtest_results_20260215_230140.json  optimization_report_20260215_230523.txt  optimization_results_20260215_230523.json
config/: crypto_settings.yaml  settings.yaml
docker/: grafana-datasources.yml  logging-stack.yml  loki-config.yml  promtail-config.yml
docs/: ADVANCED_DL_MODELS_COMPLETE.md  ADVANCED_ML_COMPLETE.md  AGENT_SWARM_GUIDE.md  ALERTING_SETUP.md  API_DEVELOPMENT_COMPLETE.md  API_REFERENCE.md  ARCHITECTURE.md  BASE_SETUP_GUIDE.md  BINANCE_TRADING_SETUP.md  CODE_REVIEW_REPORT.md  DASHBOARD_COMPLETION.md  DASHBOARD_GUIDE.md  DATABASE_INTEGRATION_COMPLETE.md  DATABASE_SCHEMA.md  DEFI_STRATEGIES_COMPLETE.md  DEPENDENCY_STATUS.md  DEPENDENCY_UPDATE_CHECKLIST.md  DEPENDENCY_UPDATE_PLAN.md  DISASTER_RECOVERY_PLAN.md  ERROR_RECOVERY_PLAYBOOK.md  INFRASTRUCTURE_COMPLETE.md  INTEGRATION_TEST_REPORT.md  LOGGING_GUIDE.md  MOBILE_WEB_APP_COMPLETE.md  MULTICHAIN_ARBITRAGE.md  ONCHAIN_ANALYTICS_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_A_COMPLETE.md  PRODUCTION_INFRASTRUCTURE_COMPLETE.md  REALTIME_DATA_COMPLETE.md  REDIS_CACHING.md  REPO_FULL_DISCOVERY_AND_STABILIZATION_PLAN.md  REST_API.md  RISK_MANAGEMENT_COMPLETE.md  RL_AGENTS_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_RESOLUTION_REPORT.md  SECURITY_UPDATE_2026-02-16.md  SECURITY_UPDATE_APPLIED.md  STRATEGY_GUIDE.md  (+16 more)
examples/: README.md  (+14 more)
(+339 files in other folders)
