[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlytics"
version = "0.1.0"
description = "Quantlytics trading platform with the Itera internal decision engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quantlytics" }]
keywords = ["trading", "fintech", "quantlytics", "itera", "backtesting", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.28.0,<2.0",
  "python-dotenv>=1.0.0,<2.0",
  "psutil>=5.9.0,<7.0",
]

[project.optional-dependencies]
core = [
  "numpy>=1.24.0,<2.0",
  "pandas>=2.0.0,<3.0",
  "scikit-learn>=1.3.0,<2.0",
  "requests>=2.31.0,<3.0",
  "urllib3>=2.6.3,<3.0",
]
ml = [
  "keras>=3.13.1,<4.0",
  "tensorflow>=2.16.0",
]
dev = [
  "pytest>=7.4.0,<9.0",
  "pytest-asyncio>=0.21.0,<1.0",
  "ruff>=0.1.0",
  "black>=23.9.0",
  "isort>=5.12.0",
  "mypy>=1.5.0",
]

[project.scripts]
quantlytics = "quantlytics.cli:main"
quantlytics-api = "quantlytics.cli:run_api"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantlytics*", "src*", "api*"]
exclude = ["web-dashboard*", "mobile-app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM",
]
ignore = ["E501", "B008", "C901"]
exclude = [".git", ".venv", "__pycache__", "build", "dist", "*.egg-info"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
